Fix kafka checkstype and spotbugs issues